--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -53,21 +53,19 @@
 
 /* NavLeft */
 
-.nav_test {
-  height: 70px;
-  display: flex;
-  align-items: center;
-  font-size: 1rem;
-}
 
 
 .nav_menu {
   position: fixed;
   display: flex;  
   justify-content:space-around;
-  width: 40%;
+  margin-left: 80px;
+  width: 500px;
 }
 .nav_item {
+  display: none;
+} 
+.nav_item1 {
   display: flex;
   align-items: center;
   height: 75px;
@@ -75,26 +73,12 @@
 .nav_links {
   color: white;
   text-decoration: none;
-  /* padding: 0.5rem 1rem; */
 }
 .nav_links:hover {
   background-color: #fdc40a67;
   border-radius: 4px;
   transition: all 0.2s ease-out;
 }
-
-/* .fa_bars {
-  color: rgb(255, 255, 255);
-} */
-
-.bladeren {
-  /* display: none; */
-  color: rgb(240, 8, 8);
-}
-/* .nav_links-mobile {
-  display: none;
-} */
-
 .menu_icon {
   display: none;
 }
@@ -105,20 +89,30 @@
   /* .navbartestItems {
     position: relative;
   } */
-  .nav_menu {
+  .nav_item1 {
     display: none;
-  }
-  /* .nav_menu.active {
-    display:flex;
-    flex-direction: column;
-    width: 10%;
-    height: 10%;
-    position: absolute;
-    top: 120px;
-    left: 5%;
-  } */
+  } 
 
-  .menu_icon {
+  .nav_item {
+    display: flex;
+    align-items: center;
+    height: 80px;
+  }
+  .nav_menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    opacity: 1;
+    transition: all 1s ease;
+  }
+
+  .fa-caret-down {
+    color: white;
+  }
+
+  
+  /* .menu_icon {
     display: block;
     position: absolute;
     top: 25px;
@@ -127,43 +121,19 @@
     font-size: 1rem;
     cursor: pointer;
 
-  }
- 
- 
-
-  /* .nav_item {
-    background-color: rgba(12, 12, 12, 0.596);
-    top: 250px;
-    align-items: center;
   } */
- /* .nav_links {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    margin-left: 55px;
-    font-size: 0.001rem;
+ 
+ 
 
-  } */
+  
+ 
 
 
  
 
-  .bladeren {
-    color: #ffffff;
-    text-decoration: none;
-    font-size: 1rem;
+  
 
-  }
-
-  .bladeren.active {
-    display:flex;
-    flex-direction: column;
-    width: 10%;
-    height: 10%;
-    position: absolute;
-    top: 120px;
-    left: 5%;
-  }
+  
 
  
 }
