--- a/src/components/Navbar/Dropdown.css
+++ b/src/components/Navbar/Dropdown.css
@@ -39,7 +39,13 @@
   
   @media screen and (max-width: 960px) {
     .fa-caret-down {
-      display: flex;
+      display: none;
     }
   }
   
+
+  /* @media screen and (min-width: 576px) 
+@media screen and (max-width: 576px) 
+@media screen and (max-width: 768px) 
+@media screen and (max-width: 992px) 
+@media screen and (max-width: 1200px)  */
