--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -1,6 +1,15 @@
 .App {
-    height: 100%;
-    text-align: left;
-    /* background-color: rgb(15, 94, 114); */
-    color: white;
-  }
+  height: 100%;
+  text-align: left;
+  /* background-color: rgb(15, 94, 114); */
+  color: white;
+}
+
+.background-video {
+  height: 100%;
+  width: 100%;
+  float: left;
+  top: 0;
+  padding: none;
+  position: fixed; /* optional depending on what you want to do in your app */
+}
