--- a/src/components/Navbar/Dropdown.css
+++ b/src/components/Navbar/Dropdown.css
@@ -1,50 +1,67 @@
 .dropdown-menu {
-    background: rgba(12, 12, 12, 0.637);
-    width: 300px;
-    position: absolute;
-    top: 80px;
-    list-style: none;
-    text-align: start;
-    border-top: 1px solid white;
+  background: rgba(22, 21, 21, 0.123);
+  width: 200px;
+  position: absolute;
+  top: 80px;
+  list-style: none;
+  text-align: start;
+  border-top: 0.125rem solid #fff;
+}
 
-  }
-  /* .dropdown-menu > ul {
-    margin-left: 0%;
-  } */
-  
-  .dropdown-menu li
-  .dropdown-menu > ul {
-    background: #ec0f0fa4;
-    cursor: pointer;
-    margin-left: 60px;
+.dropdown-menu li {
+  background: #08080813;
+  cursor: pointer;
+}
 
-  }
-  
-  .dropdown-menu li:hover {
-    background:  #fdc40a67;
-  }
-  
-  .dropdown-menu.clicked {
+.dropdown-menu li:hover {
+  background: #0b0c0c36;
+}
+
+/* .dropdown-menu.clicked {
+  display: none;
+} */
+
+.dropdown-link {
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+  color: #fff;
+  padding: 16px;
+}
+
+@media screen and (max-width: 576px) {
+  .fa-caret-down {
     display: none;
   }
-  
+}
+
+/* @media screen and (max-width: 992px) {
+  .dropdown-menu {
+    background: rgba(12, 12, 12, 0.637);
+    position: relative;
+    top: 1rem;
+    right: 11.5rem;
+    list-style: none;
+    text-align: start;
+    border-top: 0.125rem solid white;
+  }
+
   .dropdown-link {
-    display: block;
+    display: flex;
+    position: fixed;
     height: 100%;
     width: 100%;
     text-decoration: none;
     color: rgb(253, 249, 249);
-    padding: 25px;
+    padding-top: 1.25rem;
+    padding-right: 1.75rem;
+    padding-bottom: 1.25rem;
+    padding-left: 0.8rem;
   }
-  
-  @media screen and (max-width: 960px) {
-    .fa-caret-down {
-      display: none;
-    }
-  }
-  
+} */
 
-  /* @media screen and (min-width: 576px) 
+/* @media screen and (min-width: 576px) 
 @media screen and (max-width: 576px) 
 @media screen and (max-width: 768px) 
 @media screen and (max-width: 992px) 
