--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 60px;
+  height: 3.75rem;
   background-color: rgba(0, 0, 0, 0.05);
   color: white;
 
@@ -17,22 +17,22 @@
 }
 .nav_logo {
   position: fixed;
-  left: 15px;
+  left: 0.938rem;
   top: 1.5rem;
-  width: 80px;
+  width: 5rem;
   object-fit: contain;
 }
 
 /* nav right */
 .nav_font  {
   position: fixed;
-  right: 80px;
-  width: 200px;
-  top: 26px;
+  right: 5rem;
+  width: 12.5rem;
+  top: 1.625rem;
   display: flex;
   justify-content: space-around;
   list-style: none;
-  font-size: 10px;
+  font-size: 1.25rem;
 }
 .nav_font1 {
   color: white;
@@ -40,27 +40,28 @@
 }
 .nav_font2_avatar {
   position: fixed;
-  right: 45px;
-  width: 25px;
-  top: 22px;
+  right: 2.813rem;
+  width: 1.563rem;
+  top: 1.375rem;
   object-fit: contain;
 }
 .nav_font2 {
   position: fixed;
-  right: 30px;
-  top: 30px;
+  right: 1.875rem;
+  top: 1.875rem;
 }
 
-/* NavLeft */
+/* ///////////////////////NavLeft ////////////////////////////////////*/
 
 
 
 .nav_menu {
-  position: fixed;
+  /* position: fixed; */
   display: flex;  
-  justify-content:space-around;
-  margin-left: 6.25rem;
-  width: 31.25rem;
+  justify-content:space-between;
+  margin-left: 7rem;
+  width: 41.25rem;
+  font-size: 1.25rem;
 }
 .nav_item {
   display: none;
@@ -68,61 +69,103 @@
 .nav_item1 {
   display: flex;
   align-items: center;
-  height: 75px;
+  height: 4.688rem;
+
+
 }
 .nav_links {
   color: white;
   text-decoration: none;
+
+}
+.nav_item > li {
+  justify-content:space-around;
+  
+
 }
 .nav_links:hover {
-  background-color: #fdc40a67;
-  border-radius: 4px;
+  /* background-color: #05050517; */
+  border-radius: 0.25rem;
   transition: all 0.2s ease-out;
 }
 .menu_icon {
   display: none;
 }
+.fa-caret-down {
+  color: white;
+}
 
-/* 960px */
+/* 960px  1044*/
 
-@media screen and (max-width: 1920px) {
-  /* .navbartestItems {
-    position: relative;
-  } */
-  .nav_item1 {
+@media screen and (max-width: 1044px) {
+
+  .nav_menu {
+    width: 50%;
+    font-size: 1rem;
+    margin-left: 6rem;
+
+
+  }
+  .nav_item {
     display: none;
   } 
+}
 
-  .nav_item {
-    display: flex;
-    align-items: center;
-    height: 80px;
-  }
+@media screen and (max-width: 914px) {
   .nav_menu {
     display: flex;
     flex-direction: column;
     width: 100%;
-    position: absolute;
-    opacity: 1;
-    transition: all 1s ease;
-  }
+    height: 40vh;
+    font-size: 0.7rem;
 
-  .fa-caret-down {
-    color: white;
+    position: absolute;
+    top: 1.813rem;
+    left: 1.813rem;
+    opacity: 1;
+    transition: all 0.5s ease;
   }
+  
+  .nav_item {
+    display: none;
+  } 
+
+  .nav_menu.active {
+    /*achtergronddropd */
+    /* background: #242222c4;  */
+    
+    left: 0;
+    /* opacity: 1; */
+    /* transition: all 0.5s ease; */
+    /* z-index: 1; */
+  }
+  
+  .nav_item {
+    display: flex;
+    /* align-items: center; */
+    /* height: 80px; */
 
   
-  /* .menu_icon {
-    display: block;
-    position: absolute;
-    top: 25px;
-    right: 0;
-    left: 100px;
-    font-size: 1rem;
-    cursor: pointer;
+  } 
 
-  } */
+
+
+
 }
+@media screen and (max-width: 768px) {
+  .nav_menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 40vh;
+    font-size: 0.5rem;
+  }
+}
+
+
+
+/*  */
+
 
 /* @media screen and (min-width: 576px) 
 @media screen and (max-width: 576px) 
