--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -24,7 +24,7 @@
 }
 
 /* nav right */
-.nav_font  {
+.nav_font {
   position: fixed;
   right: 5rem;
   width: 12.5rem;
@@ -53,118 +53,136 @@
 
 /* ///////////////////////NavLeft ////////////////////////////////////*/
 
-
-
 .nav_menu {
   /* position: fixed; */
-  display: flex;  
-  justify-content:space-between;
+  display: flex;
+  justify-content: space-around;
   margin-left: 7rem;
   width: 41.25rem;
   font-size: 1.25rem;
 }
 .nav_item {
   display: none;
-} 
+}
 .nav_item1 {
   display: flex;
   align-items: center;
   height: 4.688rem;
-
-
 }
 .nav_links {
   color: white;
   text-decoration: none;
-
-}
-.nav_item > li {
-  justify-content:space-around;
-  
-
 }
 .nav_links:hover {
-  /* background-color: #05050517; */
+  background-color: #13121223;
   border-radius: 0.25rem;
   transition: all 0.2s ease-out;
 }
 .menu_icon {
   display: none;
 }
-.fa-caret-down {
-  color: white;
-}
 
-/* 960px  1044*/
+/* 960px */
 
-@media screen and (max-width: 1044px) {
-
+@media screen and (max-width: 1200px) {
   .nav_menu {
-    width: 50%;
-    font-size: 1rem;
-    margin-left: 6rem;
-
-
+    width: 55%;
+    font-size: 1.1rem;
+    margin-left: 6.5rem;
   }
-  .nav_item {
-    display: none;
-  } 
+}
+ 
+@media screen and (max-width: 992px) {
+    .nav_menu {
+      width: 65%;
+      font-size: 1rem;
+      margin-left: 6rem;
+    }
+
+    .nav_font {
+      position: fixed;
+      right: 3rem;
+      width: 6.5rem;
+      top: 1.625rem;
+      display: flex;
+      justify-content: space-around;
+      list-style: none;
+      font-size: 1rem;
+    }
+    .nav_font2 {
+      right: 0.4rem;
+    }
+    .nav_font2_avatar {
+      right: 1rem;
+    }
 }
 
-@media screen and (max-width: 914px) {
-  .nav_menu {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 40vh;
-    font-size: 0.7rem;
+/* @media screen and (max-width: 768px) {
+    .nav_menu {
+      width: 65%;
+      font-size: 1rem;
+      margin-left: 6.3rem;
+    }
 
-    position: absolute;
-    top: 1.813rem;
-    left: 1.813rem;
-    opacity: 1;
-    transition: all 0.5s ease;
-  }
-  
-  .nav_item {
-    display: none;
-  } 
+    .nav_font {
+      position: fixed;
+      right: 3rem;
+      width: 6rem;
+      top: 1.625rem;
+      display: flex;
+      justify-content: space-around;
+      list-style: none;
+      font-size: 0.8rem;
+    }
 
-  .nav_menu.active {
-    /*achtergronddropd */
-    /* background: #242222c4;  */
-    
-    left: 0;
-    /* opacity: 1; */
-    /* transition: all 0.5s ease; */
-    /* z-index: 1; */
-  }
-  
-  .nav_item {
-    display: flex;
-    /* align-items: center; */
-    /* height: 80px; */
+    .nav_font2 {
+      right: 0.1rem;
+    }
+    .nav_font2_avatar {
+      right: 0.8rem;
+    }
+} */
 
-  
-  } 
-
-
-
-
-}
 @media screen and (max-width: 768px) {
+  /* .nav_menu {
+    width: 60%;
+    font-size: 0.5rem;
+    margin-left: 6rem;
+  } */
+ 
+
+  /* .nav_item1 {
+    display: none;
+  }  */
+
+  .nav_item {
+    display: flex;
+    align-items: center;
+    height: 5rem;
+  }
   .nav_menu {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 40vh;
-    font-size: 0.5rem;
+    position: absolute;
+    opacity: 1;
+    transition: all 1s ease;
   }
 }
+  /* .fa-caret-down {
+    color: white;
+   */
 
+  /* .menu_icon {
+    display: block;
+    position: absolute;
+    top: 25px;
+    right: 0;
+    left: 100px;
+    font-size: 1rem;
+    cursor: pointer;
 
-
-/*  */
+  */
 
 
 /* @media screen and (min-width: 576px) 
@@ -172,8 +190,4 @@
 @media screen and (max-width: 768px) 
 @media screen and (max-width: 992px) 
 @media screen and (max-width: 1200px)  */
-
-
-
-
 
