--- a/src/components/MoreInfoButton/InfoButton.css
+++ b/src/components/MoreInfoButton/InfoButton.css
@@ -1,24 +1,28 @@
-   
-.style-btn{
-    width:100px; 
-    height:40px;
-    border:3px solid red;
-    background-color:transparent;
-    color:white;
-    display:flex;
-    justify-content: space-between;
-    
+.style-btn {
+  width: 100px;
+  height: 40px;
+  border: 3px solid red;
+  background-color: transparent;
+  color: white;
+  display: flex;
+  justify-content: space-between;
 }
 
-.moreInfo{
-    display:block;
+.moreInfo {
+  display: block;
 }
 
-.hidden{
-    display:hidden;
+.hidden {
+  display: hidden;
 }
 
-.style-btn{
-    margin-top:50px;
-    z-index: 100;
+.style-btn {
+  margin-top: 50px;
+  z-index: 100;
+}
+
+.iconsLikes,
+i {
+  font-size: 140%;
+  display: flex;
 }
