--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,61 +1,82 @@
 .banner {
-    color: white;
-    object-fit: contain;
-    height: 800px;
-  }
-  
-  .banner_contents {
-    margin-left: 30px;
-    padding-top: 350px;
-    height: 190px;
-  }
-  
-  .banner_title {
-    font-size: 3rem;
-    font-weight: 800;
-    padding-bottom: 0.3rem;
-  }
-  
-  .banner_description {
-    width: 45rem;
-    line-height: 1.3;
-    padding-top: 1rem;
-    font-size: 0.9rem;
-    max-width: 360px;
-    height: 80px;
-  }
-  
-  .banner_button {
-    cursor: pointer;
-    color: #fff;
-    outline: none;
-    border: none;
-    font-weight: 700;
-    border-radius: 0.2vw;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    margin-right: 1rem;
-    padding-top: 0.5rem;
-    background-color: rgba(51, 51, 51, 0.5);
-    padding-bottom: 0.5rem;
-  }
-  
-  .banner_button:hover {
-    color: #000;
-    background-color: #e6e6e6;
-    transition: all 0.2s;
-  }
-  
-  .banner_fadeBottom { 
-    height: 30rem;
-    background-image: linear-gradient(
-      180deg,
-      transparent,
-      rgba(37, 37, 37, 0.61),
-      #111
-    );
-  }
+  color: white;
+  object-fit: contain;
+  height: 60vh;
+}
 
-  .banner_movielogo {
-    width: 20rem;
-  }
+.player-wrapper {
+  position: relative;
+  padding-top: 56.25% /* Player ratio: 100 / (1280 / 720) */
+}
+
+
+.react-player {
+  position: absolute;
+  /* top: 3.75rem; */
+  top: 60px;
+  left: 0;
+}
+  
+
+.react-player__play-icon {
+  display: none;
+}
+
+
+.banner_contents {
+  margin-left: 30px;
+  /* padding-top: 350px; */
+  height: 190px;
+}
+
+.banner_title {
+  font-size: 3rem;
+  font-weight: 800;
+  padding-bottom: 0.3rem;
+}
+
+.banner_description {
+  width: 45rem;
+  line-height: 1.3;
+  padding-top: 1rem;
+  font-size: 0.9rem;
+  max-width: 360px;
+  height: 80px;
+}
+
+.banner_button {
+  cursor: pointer;
+  color: #fff;
+  outline: none;
+  border: none;
+  font-weight: 700;
+  border-radius: 0.2vw;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin-right: 1rem;
+  padding-top: 0.5rem;
+  background-color: rgba(51, 51, 51, 0.5);
+  padding-bottom: 0.5rem;
+}
+
+.banner_button:hover {
+  color: #000;
+  background-color: #e6e6e6;
+  transition: all 0.2s;
+}
+
+.banner_fadeBottom { 
+  height: 30rem;
+  background-image: linear-gradient(
+    180deg,
+    transparent,
+    rgba(37, 37, 37, 0.61),
+    #111
+  );
+}
+
+.banner_movielogo {
+  width: 20rem;
+}
+
+
