--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,10 +4,10 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 60px;
+  height: 10vh;
   background-color: rgba(0, 0, 0, 0.05);
   color: white;
-
+  z-index: 2;
   transition-timing-function: ease-in;
   transition: all 0.5s;
 }
@@ -15,6 +15,7 @@
 .nav_container_black {
   background-color: #111;
 }
+
 .nav_logo {
   position: fixed;
   left: 15px;
