--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,10 +4,10 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 10vh;
+  height: 3.75rem;
   background-color: rgba(0, 0, 0, 0.05);
   color: white;
-  z-index: 2;
+
   transition-timing-function: ease-in;
   transition: all 0.5s;
 }
@@ -15,25 +15,24 @@
 .nav_container_black {
   background-color: #111;
 }
-
 .nav_logo {
   position: fixed;
-  left: 15px;
+  left: 0.938rem;
   top: 1.5rem;
-  width: 80px;
+  width: 5rem;
   object-fit: contain;
 }
 
 /* nav right */
-.nav_font  {
+.nav_font {
   position: fixed;
-  right: 80px;
-  width: 200px;
-  top: 26px;
+  right: 5rem;
+  width: 12.5rem;
+  top: 1.625rem;
   display: flex;
   justify-content: space-around;
   list-style: none;
-  font-size: 10px;
+  font-size: 1.25rem;
 }
 .nav_font1 {
   color: white;
@@ -41,43 +40,42 @@
 }
 .nav_font2_avatar {
   position: fixed;
-  right: 45px;
-  width: 25px;
-  top: 22px;
+  right: 2.813rem;
+  width: 1.563rem;
+  top: 1.375rem;
   object-fit: contain;
 }
 .nav_font2 {
   position: fixed;
-  right: 30px;
-  top: 30px;
+  right: 1.875rem;
+  top: 1.875rem;
 }
 
-/* NavLeft */
-
-
+/* ///////////////////////NavLeft ////////////////////////////////////*/
 
 .nav_menu {
-  position: fixed;
-  display: flex;  
-  justify-content:space-around;
-  margin-left: 6.25rem;
-  width: 31.25rem;
+  /* position: fixed; */
+  display: flex;
+  justify-content: space-around;
+  margin-left: 7rem;
+  width: 41.25rem;
+  font-size: 1.25rem;
 }
 .nav_item {
   display: none;
-} 
+}
 .nav_item1 {
   display: flex;
   align-items: center;
-  height: 75px;
+  height: 4.688rem;
 }
 .nav_links {
   color: white;
   text-decoration: none;
 }
 .nav_links:hover {
-  background-color: #fdc40a67;
-  border-radius: 4px;
+  background-color: #13121223;
+  border-radius: 0.25rem;
   transition: all 0.2s ease-out;
 }
 .menu_icon {
@@ -86,19 +84,40 @@
 
 /* 960px */
 
-@media screen and (max-width: 1920px) {
-  /* .navbartestItems {
-    position: relative;
-  } */
-  .nav_item1 {
-    display: none;
-  } 
-
-  .nav_item {
-    display: flex;
-    align-items: center;
-    height: 80px;
+@media screen and (max-width: 1200px) {
+  .nav_menu {
+    width: 55%;
+    font-size: 1.1rem;
+    margin-left: 6.5rem;
   }
+}
+ 
+@media screen and (max-width: 992px) {
+    .nav_menu {
+      width: 65%;
+      font-size: 1rem;
+      margin-left: 6rem;
+    }
+
+    .nav_font {
+      position: fixed;
+      right: 4rem;
+      width: 6.5rem;
+      top: 1.625rem;
+      display: flex;
+      justify-content: space-around;
+      list-style: none;
+      font-size: 1rem;
+    }
+    .nav_font2 {
+      right: 1rem;
+    }
+    .nav_font2_avatar {
+      right: 2rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
   .nav_menu {
     display: flex;
     flex-direction: column;
@@ -108,11 +127,51 @@
     transition: all 1s ease;
   }
 
-  .fa-caret-down {
-    color: white;
+  .nav_item {
+    display: flex;
+    align-items: center;
+    height: 4.5rem;
+    margin-left: 0.5rem;
+
   }
 
-  
+  .nav_item1 {
+    display: none;
+  } 
+}
+
+@media screen and (max-width: 576px) {
+  /* .nav_menu {
+    width: 60%;
+    font-size: 0.5rem;
+    margin-left: 6rem;
+  } */
+ 
+  .nav_menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    opacity: 1;
+    transition: all 1s ease;
+  }
+
+  .nav_item {
+    display: flex;
+    align-items: center;
+    height: 4.5rem;
+    margin-left: 0.5rem;
+
+  }
+
+  .nav_item1 {
+    display: none;
+  } 
+}
+  /* .fa-caret-down {
+    color: white;
+   */
+
   /* .menu_icon {
     display: block;
     position: absolute;
@@ -122,16 +181,12 @@
     font-size: 1rem;
     cursor: pointer;
 
-  } */
-}
+  */
+
 
 /* @media screen and (min-width: 576px) 
 @media screen and (max-width: 576px) 
 @media screen and (max-width: 768px) 
 @media screen and (max-width: 992px) 
 @media screen and (max-width: 1200px)  */
-
-
-
-
 
