--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -7,7 +7,7 @@
 
 .player-wrapper {
   pointer-events: none;
-  z-index: 0;
+  /* z-index: 0; */
   position: relative;
   padding-top: 56.25% /* Player ratio: 100 / (1280 / 720) */
 }
