--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,6 +7,7 @@
   height: 3.75rem;
   background-color: rgba(0, 0, 0, 0.05);
   color: white;
+  z-index: 2;
 
   transition-timing-function: ease-in;
   transition: all 0.5s;
