--- a/src/components/Navbar/Nav.css
+++ b/src/components/Navbar/Nav.css
@@ -8,7 +8,7 @@
   background-color: rgba(0, 0, 0, 0.05);
   /* display: flex; */
   /* justify-content: space-between; */
-
+  z-index: 2;
   transition-timing-function: ease-in;
   transition: all 0.5s;
 }
