--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -2,7 +2,7 @@
   margin-top: -10vh;
   color: white;
   object-fit: contain;
-  height: 100vh;
+  height: fit-content;
 }
 
 .player-wrapper {
@@ -11,23 +11,23 @@
   padding-top: 56.25% /* Player ratio: 100 / (1280 / 720) */
 }
 
-
 .react-player {
   position: absolute;
-  /* top: 3.75rem; */
   top: 60px;
   left: 0;
 }
-  
 
 .react-player__play-icon {
   display: none;
 }
 
-
 .banner_contents {
+  position: absolute;
+  top: 27%;
+  left: 5%;
   margin-left: 30px;
   /* padding-top: 350px; */
+  z-index: 2;
   height: 190px;
 }
 
@@ -68,7 +68,7 @@
 }
 
 .banner_fadeBottom { 
-  height: 30rem;
+  height: 6rem;
   background-image: linear-gradient(
     180deg,
     transparent,
